[gd_scene load_steps=9 format=3 uid="uid://brtpijbfrjhpm"]

[ext_resource type="Script" path="res://Scenes/screens/main_menu.gd" id="1_5wolg"]
[ext_resource type="Texture2D" uid="uid://b7gc3g7ku7uu4" path="res://Sprites/ui/screens/forest_fight.png" id="1_pkoth"]
[ext_resource type="Texture2D" uid="uid://6nhx6bjh1dd7" path="res://Sprites/ui/screens/moon.png" id="2_8apok"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="3_aoru5"]
[ext_resource type="StyleBox" uid="uid://oohuxemtj3rw" path="res://Misc/ButtonHoverStyle.tres" id="4_afgil"]
[ext_resource type="StyleBox" uid="uid://vrw3phfka8cx" path="res://Misc/TooltipStyle.tres" id="5_1gqeo"]
[ext_resource type="PackedScene" uid="uid://cc345327cjfso" path="res://Scenes/screens/SettingsScene.tscn" id="7_erghu"]

[sub_resource type="LabelSettings" id="LabelSettings_3wmp5"]
font = ExtResource("3_aoru5")
font_size = 127
font_color = Color(0.346453, 0.2304, 0.64, 1)
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wolg")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.38, 0.38, 0.38, 1)
position = Vector2(964.5, 544)
scale = Vector2(2.13667, 1.79333)
texture = ExtResource("1_pkoth")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.38, 0.38, 0.38, 1)
position = Vector2(309.594, -209.665)
texture = ExtResource("2_8apok")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -640.0
offset_right = 258.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_aoru5")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("4_afgil")
theme_override_styles/hover = ExtResource("4_afgil")
theme_override_styles/pressed = ExtResource("4_afgil")
theme_override_styles/normal = ExtResource("5_1gqeo")
text = "New Run"

[node name="Button2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_aoru5")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("4_afgil")
theme_override_styles/hover = ExtResource("4_afgil")
theme_override_styles/pressed = ExtResource("4_afgil")
theme_override_styles/normal = ExtResource("5_1gqeo")
text = "Settings
"

[node name="Button3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_aoru5")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("4_afgil")
theme_override_styles/hover = ExtResource("4_afgil")
theme_override_styles/pressed = ExtResource("4_afgil")
theme_override_styles/normal = ExtResource("5_1gqeo")
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 422.0
offset_top = 177.0
offset_right = 1483.0
offset_bottom = 305.0
text = "The Mist"
label_settings = SubResource("LabelSettings_3wmp5")
horizontal_alignment = 1

[node name="SettingsScene" parent="." instance=ExtResource("7_erghu")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_quit_pressed"]
